--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "prepublish": "yarn build",
-    "prepare": "yarn build"
+    "prepare": "tsc"
   },
   "jest": {
     "preset": "jest-expo"
